<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PointTestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/headersize"
                android:gravity="center"
                android:text="@string/header"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/headersize" />

            <EditText
                android:id="@+id/et_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latHint" />

            <EditText
                android:id="@+id/et_long"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longHint" />

            <EditText
                android:id="@+id/et_aquracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/accuracyHint" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:text="@string/btnSubmit"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>